# globular-adsb

./: .gitignore  README.md  airports.csv  collect_archive.py  deploy.sh  fetch_archive.sh  fetch_heatmaps.sh  flights.json  globular-adsb.service  index.js  package-lock.json  package.json  pyproject.toml  start.sh  wrangler.toml
lib/flightradarapi/FlightRadar24/: zones.js
public/: index.html  script.js
src/globular_adsb/: config.py  dev_server.py  flights.py  generate.py  heatmap.py  pipeline.py  rerender_video.py  scheduler.py  upload.py  upload_cmd.py
static/: airports.js  autopilot.js  flights.js  globe.js  heatmap.js  index.html  mono_bold.json  script.js  selection.js  shader.js  state.js  style.css
static/js/: constants.js  flights.js  globe.js  heatmap.js  script.js  selection.js  solar.js
tests/: conftest.py  test_flights.py  test_heatmap.py
